<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5E1D1"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/rempah"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/image_description" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_text"
        android:textColor="#8A3C1A"
        android:textSize="24sp"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/subtitle_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle_text"
        android:textColor="#8A3C1A"
        android:textSize="16sp"
        android:layout_below="@id/title_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp" />

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/subtitle_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp">

    </LinearLayout>

    <TextView
        android:id="@+id/forget_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password_text"
        android:textColor="#8A3C1A"
        android:layout_below="@id/button_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#8A3C1A"
        android:text="@string/login_button"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="#D3B98E"
        android:text="@string/signup_button"
        android:textColor="#8A3C1A" />

</RelativeLayout>